add shader and renderer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,14 @@ ENDIF(NOT CMAKE_BUILD_TYPE)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-set(Sources ClothSimulation/main.cpp)
+set(Sources 
+    ClothSimulation/main.cpp
+    # ClothSimulation/MassSpringSolver.cpp
+    # ClothSimulation/Mesh.cpp
+    ClothSimulation/Renderer.cpp
+    ClothSimulation/Shader.cpp
+    # ClothSimulation/UserInteraction.cpp
+)
 
 INCLUDE_DIRECTORIES(/System/Library/Frameworks)
 # find OpenGL, GLUT, GLEW
